--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
 
 =========================================================
-* Vue Argon Design System - v1.1.0
+* Imago - v1.1.0
 =========================================================
 
 * Product Page: https://www.creative-tim.com/product/argon-design-system
@@ -18,19 +18,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1, shrink-to-fit=no" name="viewport">
-    <meta name="description" content="Start your development with a Design System for Bootstrap 4 and Vue.js.">
-    <meta name="author" content="Creative Tim, Cristi Jora">
-    <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>Vue Argon Design System</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1, shrink-to-fit=no"
+      name="viewport"
+    />
+    <meta
+      name="description"
+      content="Start your development with a Design System for Bootstrap 4 and Vue.js."
+    />
+    <meta name="author" content="Creative Tim, Cristi Jora" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="icon" href="<%= BASE_URL %>favicon.png" />
+    <title>Imago</title>
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-argon-design-system doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong
+        >We're sorry but vue-argon-design-system doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
